try to fix app scrollig on iOS Update num: 28.1

--- a/src/index.css
+++ b/src/index.css
@@ -291,6 +291,10 @@ input, button, textarea {
     transform: translateY(70px);
 }
 
+.root-document__page_no-scroll {
+    overflow: hidden;
+}
+
 .root-document__page_theme_tg {
     background-color: var(--tg-theme-bg-color);
     color: var(--tg-theme-text-color);
